--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,10 @@
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@syncfusion/ej2-angular-base": "^18.1.57",
+    "@syncfusion/ej2-angular-inputs": "^18.1.59",
+    "@syncfusion/ej2-base": "^18.1.57",
+    "@syncfusion/ej2-ng-base": "^16.2.53",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
